fix values section, align items properly

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -150,13 +150,37 @@ body {
 }
 
 footer {
-  background-color: #2e2e2e;
+  background-color: #f5f5f5;
+  color: #2e2e2e;
+}
+
+.footer-about .donate-btn {
+  width: 18rem;
+  margin-top: inherit;
+  display: none;
+}
+
+.see-program {
+  margin-top: 2rem;
+
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+
+  border-style: solid;
+  border-color: #f5f5f5;
   color: #f5f5f5;
 }
 
-.donate-btn {
-  width: 18rem;
-  margin-top: inherit;
+.see-program a {
+}
+
+.see-program p {
+  color: #f5f5f5;
+}
+
+a:visited {
+  color: white;
 }
 
 .objectives-container {
@@ -170,6 +194,20 @@ footer {
   gap: 0.25rem;
 }
 
+.bg {
+  background-color: rgba(128, 128, 128, 0);
+}
+
 .values-reasons {
   flex-direction: column;
+  border-style: none;
+  width: 100%;
+}
+
+.values-reasons li:nth-child(3) {
+  margin-top: -1rem;
+}
+
+.donate img {
+  margin-top: 3rem;
 }
